Fix: article left border not visible with light mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,15 +10,6 @@ body
     padding: 15px;
 }
 
-@media screen and (prefers-color-scheme: dark)
-{
-    body
-    {
-        color: white;
-        background-color: #3c3c3c;
-    }
-}
-
 a
 {
     color: inherit;
@@ -60,7 +51,7 @@ main article
         "tags"
         "links";
     gap: 15px;
-    border-left: 5px solid white;
+    border-left: 5px solid black;
     padding-left: 15px;
 }
 
@@ -130,4 +121,18 @@ footer
 footer h1
 {
     margin: 0;
+}
+
+@media screen and (prefers-color-scheme: dark)
+{
+    body
+    {
+        color: white;
+        background-color: #3c3c3c;
+    }
+
+    main article
+    {
+        border-left: 5px solid white;
+    }
 }
